# orb

./: .gitignore  .jsbeautifyrc  BUILD.gn  BuildPolyfill.mk  DEPS  Features.mk  Jenkinsfile  LICENSE  Makefile  README.md
android/: .gitignore  BUILD.gn  README.md  build.gradle  gradle.properties  settings.gradle
android/.run/: Launch app (arte).run.xml  Launch app (mitxperts).run.xml  Launch app (zdf).run.xml  Launch testsuite (integration).run.xml  Run testsuite (integration).run.xml  app.run.xml  app_test_MitxAit.run.xml  app_test_XmlAit.run.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/mock203app/: CMakeLists.txt  build.gradle
android/mock204app/: .gitignore  CMakeLists.txt  build.gradle
android/mockdialservice/: .gitignore  CMakeLists.txt  build.gradle
android/mockorbapp/: build.gradle
android/orb_client_apk/: settings.gradle.kts
android/orb_client_apk/app/: build.gradle.kts
android/orb_client_apk/gradle/: libs.versions.toml
android/orblibrary/: BUILD.gn  CMakeLists.txt  build.gradle
android/orbpolyfill/: build.gradle
android/orbservice/: .gitignore  CMakeLists.txt  build.gradle
android/tvbrowser/: CMakeLists.txt  build.gradle
android/tvbrowsershell/: build.gradle
android/voicerecognitionservice/: build.gradle
components/application_manager/: Android.mk  CMakeLists.txt  ait.cpp  ait.h  app.cpp  app.h  application_manager.cpp  application_manager.h  application_session_callback.h  hbbtv_app.cpp  hbbtv_app.h  log.h  opapp.cpp  opapp.h  utils.cpp  utils.h  xml_parser.cpp  xml_parser.h
components/network_services/: Android.mk  BUILD.gn  UdpSocketService.cpp  UdpSocketService.h  log.h  service_manager.cpp  service_manager.h  websocket_service.cpp  websocket_service.h
components/network_services/app2app/: app2app_local_service.cpp  app2app_local_service.h  app2app_remote_service.cpp  app2app_remote_service.h  log.h
components/network_services/include/: log.h
components/network_services/json_rpc/: JsonRpcCallback.cpp  JsonRpcCallback.h  JsonRpcService.cpp  JsonRpcService.h  JsonRpcServiceUtil.cpp  JsonRpcServiceUtil.h
components/network_services/media_synchroniser/: CSSUtilities.cpp  CSSUtilities.h  ClockBase.cpp  ClockBase.h  ClockUtilities.cpp  ClockUtilities.h  ContentIdentificationService.cpp  ContentIdentificationService.h  CorrelatedClock.cpp  CorrelatedClock.h  Correlation.cpp  Correlation.h  Nullable.h  SysClock.cpp  SysClock.h  TimelineSyncService.cpp  TimelineSyncService.h  WallClockService.cpp  WallClockService.h  log.h  media_synchroniser.cpp  media_synchroniser.h
components/network_services/test/: jsonrpcservice_unittest.cpp  jsonrpcserviceutil_unittest.cpp
logging/: BUILD.gn
logging/include/: log.h
orblibrary/: Android.mk  BUILD.gn
orblibrary/common/: IXmlParser.h  ait.cpp  ait.h  utils.cpp  utils.h  xml_parser.cpp  xml_parser.h
orblibrary/include/: Channel.h  Component.h  ComponentBase.hpp  DvbBroker.h  FactoryImpl.h  HtmlBuilder.h  IBrowser.h  IDvbClient.h  IFactory.h  IJson.h  IOrbBrowser.h  IPlatform.h  JsonImpl.h  Moderator.h  OpAppAcquisition.h  OpAppPackageManager.h  OrbConstants.h  OrbInterface.h  ParentalRating.h  Programme.h  VideoWindow.hpp  WebSocketServerFactory.hpp
orblibrary/moderator/: AppManager.cpp  AppManager.hpp  AppMgrInterface.cpp  AppMgrInterface.hpp  BroadcastInterface.cpp  BroadcastInterface.hpp  ComponentBase.hpp  Configuration.cpp  Configuration.hpp  Drm.cpp  Drm.h  Drm.hpp  DvbBroker.cpp  FactoryImpl.cpp  JsonImpl.cpp  JsonImpl.h  JsonRpcCallback.cpp  JsonRpcCallback.h  MediaSynchroniser.cpp  MediaSynchroniser.hpp  Moderator.cpp  Network.cpp  Network.hpp  OrbInterface.cpp  PlatformAndroid.cpp  PlatformAndroid.h  VideoWindow.cpp  VideoWindow.hpp  WebSocketServerFactory.cpp  log.h  log.hpp
orblibrary/moderator/app_mgr/: ait.cpp  ait.h  application_manager.cpp  application_manager.h  application_session_callback.h  base_app.cpp  base_app.h  hbbtv_app.cpp  hbbtv_app.h  log.h  opapp.cpp  opapp.h  utils.cpp  xml_parser.cpp  xml_parser.h
orblibrary/moderator/configuration/: Configuration.cpp  Configuration.h  ConfigurationUtil.cpp  ConfigurationUtil.h
orblibrary/moderator/network_services/: Android.mk  UdpSocketService.cpp  service_manager.cpp  websocket_service.cpp
orblibrary/moderator/utilities/: BroadcastUtil.cpp  BroadcastUtil.h  Capabilities.h  ConfigurationUtil.cpp  JsonUtil.cpp  (+4 more)
orblibrary/network/: DnsSrvResolver.cpp  DnsSrvResolver.h  HttpDownloader.cpp  HttpDownloader.h  IHttpDownloader.h  SrvRecord.h
orblibrary/package_manager/: AitFetcher.cpp  AitFetcher.h  Decryptor.cpp  Decryptor.h  HashCalculator.cpp  HashCalculator.h  IAitFetcher.h  IDecryptor.h  IHashCalculator.h  IUnzipper.h  IVerifier.h  OpAppAcquisition.cpp  OpAppAcquisition.h  OpAppPackageManager.cpp  OpenSSLDecryptor.cpp  OpenSSLDecryptor.h  OpenSSLHashCalculator.cpp  OpenSSLHashCalculator.h  Unzipper.cpp  Unzipper.h  Verifier.cpp  Verifier.h
orblibrary/polyfill/: HtmlBuilder.cpp  polyfill_unittest.cpp
orblibrary/test/: AitFetcherTestInterface.cpp  AitFetcherTestInterface.h  MockAppMgrInterface.h  MockApplicationSessionCallback.h  MockComponentBase.h  MockFactory.h  MockJson.h  MockOrbBrowser.h  MockXmlParser.h  OpAppAcquisitionTestInterface.cpp  OpAppAcquisitionTestInterface.h  OpAppPackageManagerTestInterface.cpp  OpAppPackageManagerTestInterface.h  README.md  ait_fetcher_unittest.cpp  application_manager_unittest.cpp  configuration_unittest.cpp  configuration_util_unittest.cpp  decryptor_unittest.cpp  dns_srv_resolver_unittest.cpp  http_downloader_unittest.cpp  json_util_unittest.cpp  moderator_unittest.cpp  opapp_acquisition_unittest.cpp  opapp_package_manager_unittest.cpp  string_util_unittest.cpp  verifier_unittest.cpp  video_window_unittest.cpp  xml_parser_unittest.cpp
rdk/ORB/: CMakeLists.txt  ORB.config  ORB.json
rdk/ORBBrowser/: BrowserConsoleLog.h  CMakeLists.txt  HTML5Notification.h  Module.cpp  Module.h  ORBBrowser.config  ORBBrowser.cpp  ORBBrowser.h  ORBBrowser.json  ORBBrowserJsonRpc.cpp  ORBBrowserPlugin.json  README.md  StateAwareMemoryObserver.h  WebKitImplementation.cpp
(+469 files in other folders)
