# BUILD.gn
group("orb_library_deps")
{
  deps = [
    "orblibrary:orb",
    ":build_polyfill_iframe"
  ]
}

action("build_polyfill_iframe") {
  sources = [
    "src/housekeeping/banner.js",
    "src/housekeeping/beginiffe.js",
    "src/languagecodes.js",
    "src/mediaproxies/init.js",
    "src/natives/android.js",
    "src/mediaproxies/tracklists/audiotracklist.js",
    "src/mediaproxies/tracklists/videotracklist.js",
    "src/mediaproxies/tracklists/texttracklist.js",
    "src/mediaproxies/tracklists/texttrack.js",
    "src/mediaproxies/tracklists/texttrackcuelist.js",
    "src/mediaproxies/iframeobjectproxy.js",
    "src/mediaproxies/mediamanager.js",
    "src/mediaproxies/mediaerror.js",
    "src/mediaproxies/dashproxy.js",
    "src/mediaproxies/nativeproxy.js",
    "src/mediaproxies/run.js",
    "src/housekeeping/endiffe.js"
  ]

  outputs = [ "$target_gen_dir/iframe.js" ]

  script = "scripts/concat.py"

  args = [ "--output", rebase_path(outputs[0], root_build_dir) ]

  foreach(source, sources) {
    args += [ rebase_path(source, root_build_dir) ]
  }
}
