# BUILD.gn
group("orb_library_deps")
{
  deps = [
    "orblibrary:orb",
    ":orb_polyfill_js",
    "//third_party/orb/components/network_services:orb_network_services"    
  ]
}

# TODO Pass these variables in properly
target_platform = "android"
bbc_api_enable = false

## To Do - how is this used in the code?
action("build_polyfill_dash") {
  sources = [
    "external/dash.all.min.js"
  ]

  outputs = ["$target_gen_dir/dash.all.min.js"]

  script = "scripts/concat.py"

  args = [ "--output", rebase_path(outputs[0], root_build_dir) ]

  foreach(source, sources) {
    args += [ rebase_path(source, root_build_dir) ]
  }
}

action("build_polyfill_hbbtv") {
  sources = [
    "external/dash.all.min.js",
    "src/housekeeping/banner.js",
    "src/housekeeping/beginiffe.js",
    "src/languagecodes.js",
    "src/utils.js",
    "src/core.js",
    "src/bridge.js",
    "src/holepuncher.js",
    "src/objectmanager.js",
    "src/drmmanager.js",
    "src/natives/$target_platform.js",
    "src/polyfill/xhr.js",
    "src/polyfill/close.js",
    "src/polyfill/debug.js",
    "src/polyfill/keyevent.js",
    "src/polyfill/orbdebug.js",
    "src/objects/collection.js",
    "src/mediaproxies/tracklists/audiotracklist.js",
    "src/mediaproxies/tracklists/videotracklist.js",
    "src/objects/channel.js",
    "src/objects/programme.js",
    "src/objects/dashevent.js",
    "src/objects/channellist.js",
    "src/objects/channelconfig.js",
    "src/objects/configuration/oipfconfiguration.js",
    "src/objects/configuration/configuration.js",
    "src/objects/configuration/localsystem.js",
    "src/objects/capabilities/oipfcapabilities.js",
    "src/objects/videobroadcast.js",
    "src/objects/avcomponent.js",
    "src/objects/avvideocomponent.js",
    "src/objects/avaudiocomponent.js",
    "src/objects/avsubtitlecomponent.js",
    "src/objects/keyset.js",
    "src/objects/privatedata.js",
    "src/objects/application.js",
    "src/objects/applicationmanager.js",
    "src/objects/avcontrol.js",
    "src/objects/oipfgatewayinfo.js",
    "src/objects/oipfdrmagent.js",
    "src/objects/parentalcontrol/oipfparentalcontrolmanager.js",
    "src/objects/parentalcontrol/parentalratingscheme.js",
    "src/objects/parentalcontrol/parentalratingschemecollection.js",
    "src/objects/parentalcontrol/parentalrating.js",
    "src/objects/parentalcontrol/parentalratingcollection.js",
    "src/objects/searchmanager/oipfsearchmanager.js",
    "src/objects/searchmanager/metadatasearch.js",
    "src/objects/searchmanager/query.js",
    "src/objects/searchmanager/searchresults.js",
    "src/objects/mediasync/mediasynchroniser.js",
    "src/objects/mediasync/mediaelementobserver.js",
    "src/objects/mediasync/broadcastobserver.js",
    "src/objects/mediasync/mediaelementtsclient.js",
    "src/objects/csmanager.js",
    "src/objects/oipfdrmagent.js",
    "src/objects/oipfgatewayinfo.js",
    "src/extensions/textinputextension.js",
    "src/mediaproxies/mediaerror.js",
    "src/mediaproxies/mediamanager.js",
    "src/mediaproxies/dashproxy.js",
    "src/mediaproxies/nativeproxy.js",
    "src/proprietary/bbc/bbc.js", # Proprietary
    "src/run.js",
    "src/housekeeping/endiffe.js"
  ]

  outputs = [ "$target_gen_dir/hbbtv.js" ]

  script = "scripts/concat.py"

  args = [ "--output", rebase_path(outputs[0], root_build_dir) ]

  foreach(source, sources) {
    if (source != "src/proprietary/bbc/bbc.js" || bbc_api_enable) {
      args += [ rebase_path(source, root_build_dir) ]
    }
  }
}

hbbtv_js_obj = "$target_out_dir/hbbtv_js.o"
hbbtv_js_src = "$target_gen_dir/hbbtv.js"

action("build_polyfill_hbbtv_obj")
{
  deps = [ ":build_polyfill_hbbtv" ]

  script = "scripts/embed_file.py"

  inputs = [ hbbtv_js_src ]
  outputs = [ hbbtv_js_obj ]

  args = [
    rebase_path(hbbtv_js_src, root_build_dir),
    rebase_path(hbbtv_js_obj, root_build_dir),
    current_cpu ]
}

static_library ("orb_polyfill_js")
{
  deps = [ ":build_polyfill_hbbtv_obj" ]

  sources = [ hbbtv_js_obj ]

  include_dirs = [ "." ]
}
